# src/swagger/swagger.json
@@ -16,9 +16,9 @@
     }
   ],
   "paths": {
-    "/api/weather/{cc}/{city}": {
+    "/api/country/{cc}/city/{city}": {
       "get": {
-        "tags": ["Weather"],
+        "tags": ["Country"],
         "summary": "Finds all related weather",
         "description": "Get all weather data about a city",
         "parameters": [
